--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
   <main>
     <hi>William Hansen - WDD 130</hi>
-    <img scr="20220918_074718000_IOS.webp" alt="Hello, My name is William Hansen" width="200">
+    <img scr="20220918_074718000_iOS.webp" alt="Hello, My name is William Hansen" width="200">
     <p>I am 21 years old and from a small town in western Idaho 
       called Melba Idaho. This is my second semester 
       of my software engineering degree. 
