--- a/wdd130/index.html
+++ b/wdd130/index.html
@@ -1,38 +1,34 @@
 <!DOCTYPE html>
 <html lang="en-US">
-<head>
-  </head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>William Hansen - WDD130</title>
-  </head>
-  <body>
-    <header>
-      <nav>
-        <a href="#">HOME</a>             
-        <a href="wwr/index.html">White Water Rafting Website</a>
-        <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-      </nav>
-    </header>
-  <main>
-    <hi>William Hansen - WDD 130</hi>
-    <img scr="https://lh3.googleusercontent.com/fife/APg5EOYcMwsq8kOhkiS7pjyzqbUOO-GWWAw2Tno3MK23P_EfnMxk0U0HhqMJnh1KilCvUc1BiWya2lNEUJvUGVRBrjgY3qoFTt4cKhBt_S7DJSfJx8E2SJffAHnJ1RLrBARLUdOLv7xJHq_Q0oXyUzLCD1yM7JORlsKUPwNxGqbXiOQm9dOy3rkMnbQyqqMMgCso8DIdZxYMMGpRWgbJNgpqgHsynJ-TfW5onPlLcyGpfa6cK0-yd0BzDDRp0EcgHD1xH_WF6TQsrrfrVI-TgECxR60eMno3J-hOyMmjPcJjjR0vu3rHibp9DIszfXV8Jkap-9Eq68-ok3BQ1fXek1b0zP_wv96diACcUDZ_g4nJYh-rX1dqmIIP2VUvm0QlBr7PISvUD47nXltEyGQPMX6QbDJn_LFv5hQlXOSD01LLUZKoC8QjfbjI4uQvcBz82AKGVcvVuElkRL8BWj91dE7TCBJ-Tv1j7iFz4odxNUMjj5sNX3IVAxY9QYlpDXkdxKsb-1ioCWmSJxqROhMpHesgbKD23P4D7G3_iv1sZL0GX2-BgYw6QtsV8Qc42M0883Gx9rZY4zXnzO_6_I5sHNRg4HSLrj3-XBHIOzcrUDXdoEpJ6F3k2FXl6YSdm1umAhvZFDl1PhJ2RkO4H1wIfZSlTJe0KibtNDQtivEkrpynCESNjMpbCM2MWAwmKgxcHP_i8Y53zHAZQBVXIYz0MXJosBfmW5S6Xne3nXGZDzHu4I5dJW7y2UaesyquYZK4JDaApsPqbluxgZ5Wiqe-IIXt235G5HfsWmVt6T8ojEmGNGap6pARJtHM5o1wW_M-0pPQ_yRvilkiYyKUh9-jlbHX4SPLFQj7lsqf-Gj5nRFdFyu22O_uRo5_2zNNnmkGf5UWczLJ_YoLMKHU-Bh1Bw7eppx2ZGopryHiB6AuJPfXHU812tKvpdbpOsj6tKNHbxXqWleMlx7tW9Jwp5rtdQTGfZcuASA7i_l86QtXsfpb1J3xiT6gtoBYY6PXIesbnPkH-6-a7wHEGXsJpCAaTTX_1CPgmDBXejd_iPizrIPoY4TVxU6mO4xcIVoxq9jtZ-9WGAKDX83UP_WqDkBwPhHpqnS8mZjfT18kW1wAeJSkPh1Q7ZQ1e9fS4yBM7X8hAm_-CSR8dKzLh36C9jl7-cZcRd1QQ-rWOdNFVf1hkkqV7DG2tGR1CFCjJDtRXHSZaKXh2UV0uJdCX-Zh6qs_aemsy6LO_M7XqgZK0d6BPToyK7gGadblDmcRrI40AkZKjDWDSIuBXrQ0Q_sgzSXexgdRHS-zvT3k2ATzamtrzzpUzVyWo2PvNUKOVl50-LK3L9-btXbgCb0IRlzmfxt-76B5cpscmaKh83B-3hfrhlrNzoreVOYdBXKJ93aHJ1i160JgIURDUszN8IxTOSXR9g9xR2MeMwrMy6c0_qDjVSs_gmQcWcdp-uPcxfH89dd7ToCp8HcpmBwO27LMiB_2BG8ICFACRNzp8m0gXDjUvw11d_M2pegXNuPgRXW-hKPWvbAsPKJ-BosDDzqq-QwBqPCz8zXcGizsA9PcYGh5hGNn49M2ikPiDAx7ypZJlIH9zLVSRo9bO2kUJvMvcxs5hRb2YbJRqQfNibvgUHskZ2r4qcXhN89u6sfLHxMMNjGmdsmY0hAYyeA2ddyZjq1wWoz19H3rKf7zFgLccHEm4alIyWC3hMQfdQu6ZI60S_U4oyoZ40--wgXQvkUyD-M1AV3_6FJM7QhXE2ktknH3fksDNFsnzzF05jqbNGOdYAumUF92WjTT1g64Vk5TgmN0iMdkZP9EPCt3LAJGHzWzIdOwtuk718-XNpRyr51XUWLlwk8W04QJiNf1P2AmiN083yCgNTZdhT-nExuobxaqTGrFx_wu62tvTJnrDjTmVfgXVfoB9QrRkiOAj2MPeESuP8dhtLZt2Q=s1000-w200-h700" alt="Hello, My name is William Hansen" width="200">
-    <p>I am 21 years old and from a small town in western Idaho 
-      called Melba Idaho. This is my second semester 
-      of my software engineering degree. 
-      I am from a family of 5 sibling with me 
-      being number 4 of the 5. I enjoy learning new 
-      things and anything outside. 
-      This is going to be an exciting class for me 
-      because i have bever coded before.</p>
-  </main>
-  <footer>
-    ©2025 😁 William Hansen 😁 Melba, Idaho 
-  </footer>  
-
-
-
-    
-</body>
+  <head>
+    </head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>William Hansen - WDD130</title>
+    </head>
+    <body>
+      <header>
+        <nav>
+          <a href="#">HOME</a>             
+          <a href="wwr/index.html">White Water Rafting Website</a>
+          <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+        </nav>
+      </header>
+      <main>
+        <hi>William Hansen - WDD 130</hi>
+        <img scr="images/20220918_074718000_iOS.webp">
+        <p>I am 21 years old and from a small town in western Idaho 
+          called Melba Idaho. This is my second semester 
+          of my software engineering degree. 
+          I am from a family of 5 sibling with me 
+          being number 4 of the 5. I enjoy learning new 
+          things and anything outside. 
+          This is going to be an exciting class for me 
+          because i have bever coded before.</p>
+      </main>
+      <footer>
+        ©2025 😁 William Hansen 😁 Melba, Idaho 
+      </footer>  
+  </body>
 </html>
