--- a/wdd130/index.html
+++ b/wdd130/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <head>
+  </head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +17,7 @@
     </header>
   <main>
     <hi>William Hansen - WDD 130</hi>
-    <img scr="images/20220918_074718000_iOS.webp">
+    <img scr="20220918_074718000_iOS.webp" alt="Hello, My name is William Hansen" width="200">
     <p>I am 21 years old and from a small town in western Idaho 
       called Melba Idaho. This is my second semester 
       of my software engineering degree. 
@@ -28,7 +28,11 @@
       because i have bever coded before.</p>
   </main>
   <footer>
-      ©2025 😁 William Hansen 😁 Melba, Idaho 
+    ©2025 😁 William Hansen 😁 Melba, Idaho 
   </footer>  
+
+
+
+    
 </body>
 </html>
