--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>William Hansen - WDD130</title>
+    <meta name="description" content="The is William home page for WDD130 for my assignment">
+    <meta name="author" content="William Hansen">
   </head>
   <body>
     <header>
@@ -17,7 +19,7 @@
     </header>
   <main>
     <hi>William Hansen - WDD 130</hi>
-    <img scr="20220918_074718000_iOS.webp">
+    <img src="images/profile.webp" alt="William Hansen">
     <p>I am 21 years old and from a small town in western Idaho 
       called Melba Idaho. This is my second semester 
       of my software engineering degree. 
