--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  </head>
+  
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>William Hansen - WDD130</title>
     <meta name="description" content="The is William home page for WDD130 for my assignment">
     <meta name="author" content="William Hansen">
+
+    <link href="styles.css">
   </head>
   <body>
     <header>
@@ -29,6 +32,11 @@
       This is going to be an exciting class for me 
       because i have bever coded before.</p>
   </main>
+  <aside>
+    <h2>Idaho</h2>
+    <img src="images/OIP.webp" alt="Idaho landscape">
+    <p> Idaho is a state in the western side of the state it borders: Utah, Wyoming, Montana, Oregon, washington, and Canada.</p>
+  </aside>
   <footer>
     ©2025 😁 William Hansen 😁 Melba, Idaho 
   </footer>  
