--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="The is William home page for WDD130 for my assignment">
     <meta name="author" content="William Hansen">
 
-    <link href="styles.css">
+    <link ref="styles" href="styles/styles.css">
   </head>
   <body>
     <header>
