--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <html lang="en-US">
 <head>
   
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>William Hansen - WDD130</title>
-    <meta name="description" content="The is William home page for WDD130 for my assignment">
-    <meta name="author" content="William Hansen">
-
-    <link href="styles.css">
-  </head>
+  
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>William Hansen - WDD130</title>
+  <meta name="description" content="The is William home page for WDD130 for my assignment">
+  <meta name="author" content="William Hansen">
+  <link rel="stylesheet" href="styles/styles.css">
+</head>
   <body>
     <header>
       <nav>
