--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
   <main>
     <hi>William Hansen - WDD 130</hi>
-    <img src="images/profile.webp" alt="William Hansen">
+    <img src="images/profile.webp" alt="William Hansen" width="200">
     <p>I am 21 years old and from a small town in western Idaho 
       called Melba Idaho. This is my second semester 
       of my software engineering degree. 
