--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </nav>
     </header>
   <main>
-    <hi>William Hansen - WDD 130</hi>
+    <title>William Hansen - WDD 130</title>
     <img src="images/profile.webp" alt="William Hansen" width="200">
     <p>I am 21 years old and from a small town in western Idaho 
       called Melba Idaho. This is my second semester 
