--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <a href="wwr/index.html">White Water Rafting Website</a>
         <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
       </nav>
+      <title>William Hansen - WDD 130</title>
     </header>
   <main>
     <title>William Hansen - WDD 130</title>
