--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
         <a href="wwr/index.html">White Water Rafting Website</a>
         <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
       </nav>
-      <title>William Hansen - WDD 130</title>
+      
     </header>
   <main>
     <title>William Hansen - WDD 130</title>
     <img src="images/profile.webp" alt="William Hansen" width="200">
+    <footer>William Hansen - WDD 130</footer>
     <p>I am 21 years old and from a small town in western Idaho 
       called Melba Idaho. This is my second semester 
       of my software engineering degree. 
