--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       being number 4 of the 5. I enjoy learning new 
       things and anything outside. 
       This is going to be an exciting class for me 
-      because i have bever coded before.</p>
+      because i have never coded before.</p>
   </main>
   <aside>
     <h2>Idaho</h2>
