--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -26,7 +26,7 @@
     <h2>Branding</h2>
 
     <h3>Website logo</h3>
-    <img scr="imges/logo.webp" alt="Rafting Site logo">
+    <img src="images/R (2).webp" alt="Rafting Site logo">
 
     <h2>style guide</h2>
 
