--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -19,7 +19,13 @@
     <h2>Overview</h2>
 
     <h3>Purpose</h3>
-    <p>[to be filled out]</p>
+    <p>why?
+        -to help those to know about rafting 
+        Who is this site for?
+        -experts, thrill seeker, and people interested in the sport.
+        what will this help me with?
+        -learning about it, where you can go, and more!
+    </p>
     <h3>Audience</h3>
     <p>[to be filled out]</p>
 
