--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -27,7 +27,7 @@
         -learning about it, where you can go, and more!
     </p>
     <h3>Audience</h3>
-    <p>[to be filled out]</p>
+    <p>this site is for all those desiring to start or continue there knowledge on rafting.</p>
 
     <h2>Branding</h2>
 
@@ -52,8 +52,9 @@
     </nav>
     <h2>Wireframes</h2>
     <h3>Home Page Wireframes</h3>
-    <img scr="http://byui-wdd.github.io/wdd130/rafting_images/Wireframe_home.png" alt="Required Home Page Wireframe Design">
+    <img scr="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-home.png" alt="Required Home Page Wireframe Design">
     <h3>Page 2 Wireframe</h3>
+    <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr-wireframe-aboutus-update.png" alt="About Us Page Wireframe Design" Width="700">
 
 </main>
 <footer> 
