--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -48,6 +48,7 @@
         <a href="#">Home</a>
         <a href="#">Page 2</a>
         <a href="#">Contact Us</a>
+        <a href="https://coolors.co/b7d3f2-afafdc-8a84e2-84afe6-79beee" target="_blank">https://coolors.co/b7d3f2-afafdc-8a84e2-84afe6-79beee</a>
         </Home>
     </nav>
     <h2>Wireframes</h2>
