--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -37,7 +37,7 @@
     <h2>style guide</h2>
 
     <h3>color palette</h3>
-    <p>[to be filled out]</p>
+    <p>     <a href="https://coolors.co/b7d3f2-afafdc-8a84e2-84afe6-79beee" target="_blank">https://coolors.co/b7d3f2-afafdc-8a84e2-84afe6-79beee</a></p>
     <h3>typogrphy </h3>
     <h4>heading example font</h4>
     <p>lorem ipsum dolor sit amet consectetur adipisicing alit. minima, inventore.</p>
