--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       <nav>
         <a href="#">HOME</a>             
         <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+        <a href="http://linkedin.com"> Linkedin</a>
+        <a href="http://facebook.com"> facebook Profile</a>
       </nav>
       
     </header>
@@ -31,8 +33,13 @@
       things and anything outside. 
       This is going to be an exciting class for me 
       because i have never coded before.</p>
+    <ul class="box">
+      <li> <a href="https://www.churchofjesuschrist.org/temples/details/provo-city-center-temple?lang=eng" target="_blank"></a></li>
+      <li> <a href="https://www.churchofjesuschrist.org/temples/details/nauvoo-illinois-temple?lang=eng" target="_blank"></a></li>
+      <li> <a href="https://www.churchofjesuschrist.org/temples/details/logan-utah-temple?lang=eng" target="_blank"></a></li>
+    </ul>
   </main>
-  <aside>
+  <aside class="box">
     <h2>Idaho</h2>
     <img src="images/OIP.webp" alt="Idaho landscape">
     <p> Idaho is a state in the western side of the state it borders: Utah, Wyoming, Montana, Oregon, washington, and Canada.</p>
@@ -45,4 +52,6 @@
 
     
 </body>
+<!-- Changes 6.21.2023
+- Added links to my favorite temples -->
 </html>
