--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
       This is going to be an exciting class for me 
       because i have never coded before.</p>
     <ul class="box">
-      <li> <a href="https://www.churchofjesuschrist.org/temples/details/provo-city-center-temple?lang=eng" target="_blank"></a></li>
-      <li> <a href="https://www.churchofjesuschrist.org/temples/details/nauvoo-illinois-temple?lang=eng" target="_blank"></a></li>
-      <li> <a href="https://www.churchofjesuschrist.org/temples/details/logan-utah-temple?lang=eng" target="_blank"></a></li>
+      <li> <a href="https://www.churchofjesuschrist.org/temples/details/provo-city-center-temple?lang=eng" target="_blank">provo</a></li>
+      <li> <a href="https://www.churchofjesuschrist.org/temples/details/nauvoo-illinois-temple?lang=eng" target="_blank">nauvoo</a></li>
+      <li> <a href="https://www.churchofjesuschrist.org/temples/details/logan-utah-temple?lang=eng" target="_blank">logan</a></li>
     </ul>
   </main>
   <aside class="box">
