--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -39,9 +39,9 @@
     <h3>color palette</h3>
     <p>     <a href="https://coolors.co/b7d3f2-afafdc-8a84e2-84afe6-79beee" target="_blank">https://coolors.co/b7d3f2-afafdc-8a84e2-84afe6-79beee</a></p>
     <h3>typogrphy </h3>
-    <h4>heading example font</h4>
+    <h4>heading font - serif</h4>
     <p>lorem ipsum dolor sit amet consectetur adipisicing alit. minima, inventore.</p>
-    <h4>colored callout example font</h4>
+    <h4>colored callout example font - sans-serif</h4>
     <p>lorem ipsum dolor sit amet consectetur adipisicing alit. minima, inventore.</p>
     <h3>navigation</h3>
     <nav>
