--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -52,9 +52,9 @@
         </nav>
         <h2>Wireframes</h2>
         <h3>Home Page Wireframes</h3>
-        <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-home.png">
+        <img src="images/wwr-wireframe-home.png" alt="home page Wireframe">
         <h3>Page 2 Wireframe</h3>
-        <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr-wireframe-aboutus-update.png" Width="700">
+        <img src="images/wwr-wireframe-aboutus-update.png" alt="about us Wireframe" Width="700">
 
     </main>
     <footer> 
