--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="en-US">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <title>site plan rafting - William Hansen</title>
-        <meta name="description" content="The rafting site is for those that desire to raft">
-        <meta name="author" content="William Hansen">
-        <link rel="stylesheet" href="styles/site-plan-rafting.css">
-
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>site plan rafting - William Hansen</title>
+    <meta name="description" content="The rafting site is for those that desire to raft">
+    <meta name="author" content="William Hansen">
+    <link rel="stylesheet" href="styles/site-plan-rafting.css">
+</head>
+<body>
+    <head> 
+    <h1>Rafting Site Plan </h1>
+    <div>William Hansen</div>
     </head>
-    <body>
-            
-        <h1>Rafting Site Plan </h1>
-        <div>William Hansen</div>
-            
-    </body>
+
     <main>
         <h2>Overview</h2>
         <h3>Purpose</h3>
@@ -55,4 +54,5 @@
         ©2025 :0 Rafting Site Doc :0 William Hansen
 
     </footer>
+</body>
 </html>
