--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <header>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <Title>About Us -- William Hansen</Title>
+    <meta name="description" content="About Us">
+    <meta name="author" content="william hansen">
+    <link rel="stylesheet" href="styles/rafting.css">
     <img src="images/logo.webp" alt="White water rafting">
     <nav> 
         <a href="site-plan-rafting.html">Home Page</a>
         <a href="about.html">About Us</a>
         <a href="trip.html">Places</a>
         <a href="contact.html">Contacts Us</a>
+        
     </nav>
     <main>
         <div class="hero">
