--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -39,8 +39,8 @@
         <p>lorem ipsum dolor sit amet consectetur adipisicing alit. minima, inventore.</p>
         <h3>navigation</h3>
         <nav>
-            <a href="#">Home</a>
-            <a href="#">Page 2</a>
+            <a href="site-plan-rafting.html">Home</a>
+            <a href="about.html">about Us</a>
             <a href="#">Contact Us</a>
         </nav>
         <h2>Wireframes</h2>
