--- a/wwr/about.html
+++ b/wwr/about.html
@@ -2,6 +2,7 @@
 <header>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta html lang="en-US">
     <Title>About Us -- William Hansen</Title>
     <meta name="description" content="About Us">
     <meta name="author" content="william hansen">
