--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<header>
+<html lang="en-US">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta html lang="en-US">
     <Title>About Us -- William Hansen</Title>
     <meta name="description" content="About Us">
     <meta name="author" content="william hansen">
@@ -13,8 +13,8 @@
         <a href="about.html">About Us</a>
         <a href="trip.html">Places</a>
         <a href="contact.html">Contacts Us</a>
-        
     </nav>
+</head>
     <main>
         <div class="hero">
             <img src="images/rafting1.jpg" alt=" hero image">
@@ -66,5 +66,5 @@
             </a>
         </nav>
     </footer>
-</header>
+
 </html>
