--- a/wwr/about.html
+++ b/wwr/about.html
@@ -57,7 +57,7 @@
             <a href="https://facebook.com">
                 <img src="images/fb.jpg" alt="Facebook">
             </a>
-            <a href="htt[s://twitter.com">
+            <a href="https://twitter.com">
                 <img src="images/tw.png" alt="twitter">
             
             </a>
