--- a/wwr/about.html
+++ b/wwr/about.html
@@ -16,12 +16,12 @@
     </nav>
 </head>
     <main>
-        <div class="hero">
-            <img src="images/rafting1.jpg" alt=" hero image">
-        </div>
         <h1>
-            The Raft Company
+            The Raft company
         </h1>
+        <div class="hero">
+            <img src="images/rafting1.jpg" alt=" hero image" width="50px">
+        </div>
         <article>
             <img src="images/rafting.jpg" alt="Happy rafters ">
             <p>
