--- a/wwr/about.html
+++ b/wwr/about.html
@@ -7,7 +7,7 @@
     <meta name="description" content="About Us">
     <meta name="author" content="william hansen">
     <link rel="stylesheet" href="styles/rafting.css">
-    <img src="images/logo.png" alt="White water rafting">
+    <img src="images/logo.png" alt="White water rafting" width="100px">
     <nav> 
         <a href="site-plan-rafting.html">Home Page</a>
         <a href="about.html">About Us</a>
