--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       
     </header>
 
-  <main>
+  <main class="grid">
     
     <img src="images/profile.webp" alt="William Hansen" width="200">
     <footer>William Hansen - WDD 130</footer>
@@ -40,7 +40,7 @@
       <li> <a href="https://www.churchofjesuschrist.org/temples/details/logan-utah-temple?lang=eng" target="_blank">logan</a></li>
     </ul>
   </main>
-  <aside class="box">
+  <aside class="box" class="grid">
     <h2>Idaho</h2>
     <img src="images/OIP.webp" alt="Idaho landscape">
     <p> Idaho is a state in the western side of the state it borders: Utah, Wyoming, Montana, Oregon, washington, and Canada.</p>
