--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       
     </header>
 
-  <main class="grid">
-    
+  <main>
+    <div class="grid">
     <img src="images/profile.webp" alt="William Hansen" width="200">
     <footer>William Hansen - WDD 130</footer>
     <p>I am 21 years old and from a small town in western Idaho 
@@ -39,11 +39,14 @@
       <li> <a href="https://www.churchofjesuschrist.org/temples/details/nauvoo-illinois-temple?lang=eng" target="_blank">nauvoo</a></li>
       <li> <a href="https://www.churchofjesuschrist.org/temples/details/logan-utah-temple?lang=eng" target="_blank">logan</a></li>
     </ul>
+    </div>
   </main>
-  <aside class="box" class="grid">
+  <aside class="box">
+    <div class="grid">
     <h2>Idaho</h2>
     <img src="images/OIP.webp" alt="Idaho landscape">
     <p> Idaho is a state in the western side of the state it borders: Utah, Wyoming, Montana, Oregon, washington, and Canada.</p>
+    </div>
   </aside>
   <footer>
     ©2025 😁 William Hansen 😁 Melba, Idaho 
