--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-      <nav>
+      <nav class="flex">
         <a href="#">HOME</a>             
         <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
         <a href="http://linkedin.com"> Linkedin</a>
@@ -21,33 +21,34 @@
       </nav>
       
     </header>
+  <div class="grid">
+    <main>
 
-  <main>
-    <div class="grid">
-    <img src="images/profile.webp" alt="William Hansen" width="200">
-    <footer>William Hansen - WDD 130</footer>
-    <p>I am 21 years old and from a small town in western Idaho 
-      called Melba Idaho. This is my second semester 
-      of my software engineering degree. 
-      I am from a family of 5 sibling with me 
-      being number 4 of the 5. I enjoy learning new 
-      things and anything outside. 
-      This is going to be an exciting class for me 
-      because i have never coded before.</p>
-    <ul class="box">
-      <li> <a href="https://www.churchofjesuschrist.org/temples/details/provo-city-center-temple?lang=eng" target="_blank">provo</a></li>
-      <li> <a href="https://www.churchofjesuschrist.org/temples/details/nauvoo-illinois-temple?lang=eng" target="_blank">nauvoo</a></li>
-      <li> <a href="https://www.churchofjesuschrist.org/temples/details/logan-utah-temple?lang=eng" target="_blank">logan</a></li>
-    </ul>
-    </div>
-  </main>
-  <aside class="box">
-    <div class="grid">
-    <h2>Idaho</h2>
-    <img src="images/OIP.webp" alt="Idaho landscape">
-    <p> Idaho is a state in the western side of the state it borders: Utah, Wyoming, Montana, Oregon, washington, and Canada.</p>
-    </div>
-  </aside>
+      <img src="images/profile.webp" alt="William Hansen" width="200">
+      <footer>William Hansen - WDD 130</footer>
+      <p>I am 21 years old and from a small town in western Idaho 
+        called Melba Idaho. This is my second semester 
+        of my software engineering degree. 
+        I am from a family of 5 sibling with me 
+        being number 4 of the 5. I enjoy learning new 
+        things and anything outside. 
+        This is going to be an exciting class for me 
+        because i have never coded before.</p>
+      <ul class="box">
+        <li> <a href="https://www.churchofjesuschrist.org/temples/details/provo-city-center-temple?lang=eng" target="_blank">provo</a></li>
+        <li> <a href="https://www.churchofjesuschrist.org/temples/details/nauvoo-illinois-temple?lang=eng" target="_blank">nauvoo</a></li>
+        <li> <a href="https://www.churchofjesuschrist.org/temples/details/logan-utah-temple?lang=eng" target="_blank">logan</a></li>
+      </ul>
+
+    </main>
+    <aside class="box">
+
+      <h2>Idaho</h2>
+      <img src="images/OIP.webp" alt="Idaho landscape">
+      <p> Idaho is a state in the western side of the state it borders: Utah, Wyoming, Montana, Oregon, washington, and Canada.</p>
+
+    </aside>
+  </div>
   <footer>
     ©2025 😁 William Hansen 😁 Melba, Idaho 
   </footer>  
