--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <p> Idaho is a state in the western side of the state it borders: Utah, Wyoming, Montana, Oregon, washington, and Canada.</p>
 
     </aside>
-  </div>
+  </grid>
   <footer>
     ©2025 😁 William Hansen 😁 Melba, Idaho 
   </footer>  
