--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 </head>
 <body>
     <header>
-      <nav class="flex">
+      <nav class="grid">
         <a href="#">HOME</a>             
         <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
         <a href="http://linkedin.com"> Linkedin</a>
         <a href="http://facebook.com"> facebook Profile</a>
-      </nav>
+      </grid>
       
     </header>
   <div class="grid">
