--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
         <li> <a href="https://www.churchofjesuschrist.org/temples/details/nauvoo-illinois-temple?lang=eng" target="_blank">nauvoo</a></li>
         <li> <a href="https://www.churchofjesuschrist.org/temples/details/logan-utah-temple?lang=eng" target="_blank">logan</a></li>
       </ul>
-
+  
     </main>
+  </grid>
+  <div class="grid">
     <aside class="box">
 
       <h2>Idaho</h2>
