--- a/wwr/about.html
+++ b/wwr/about.html
@@ -24,19 +24,19 @@
         </div>
         <article>
             <img src="images/rafting.jpg" alt="Happy rafters ">
-            <p>
+            <p1>
                 we are here to make happy people in the great outdoors.
                 It'll be a slash.
-            </p>
+            </p1>
         </article>
         <section>
             <title>
                 History 
             </title>
-            <p>
+            <p2>
                 we establish by a greek settler whose mom was a greek God.
             
-            </p>
+            </p2>
         </section>
         <section>
             <h2>
@@ -52,7 +52,7 @@
 
     </main>
 <footer>
-    <p> ©2025 The raft company -- William Hansen  </p>
+    <p3> ©2025 The raft company -- William Hansen  </p3>
 
     <nav class="sociallinks">
         <a href="https://facebook.com">
