--- a/wwr/about.html
+++ b/wwr/about.html
@@ -52,7 +52,7 @@
 
     </main>
 <footer>
-    <p3> ©2025 The raft company -- William Hansen  </p3>
+    ©2025 The raft company -- William Hansen 
 
     <nav class="sociallinks">
         <a href="https://facebook.com">
