--- a/wwr/about.html
+++ b/wwr/about.html
@@ -8,13 +8,17 @@
     <meta name="author" content="william hansen">
     <link rel="stylesheet" href="styles/rafting.css">
     <img src="images/logo.png" alt="White water rafting" width="100px">
-    <nav> 
-        <a href="site-plan-rafting.html">Home Page</a>
-        <a href="about.html">About Us</a>
-        <a href="trip.html">Places</a>
-        <a href="contact.html">Contacts Us</a>
-    </nav>
-</head>
+</head>   
+<body>
+    <header>
+        <nav> 
+            <a href="site-plan-rafting.html">Home Page</a>
+            <a href="about.html">About Us</a>
+            <a href="trip.html">Places</a>
+            <a href="contact.html">Contacts Us</a>
+        </nav>
+    </header>
+</body>
     <main>
         <h1>
             The Raft company
