--- a/wwr/about.html
+++ b/wwr/about.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <nav> 
+        <nav class="flex"> 
             <a href="site-plan-rafting.html">Home Page</a>
             <a href="about.html">About Us</a>
             <a href="trip.html">Places</a>
