--- a/wwr/about.html
+++ b/wwr/about.html
@@ -35,9 +35,9 @@
         </p1>
     </article>
     <section>
-        <title>
+        <div>
             History 
-        </title>
+        </div>
         <p2>
             we establish by a greek settler whose mom was a greek God.
         
