--- a/wwr/about.html
+++ b/wwr/about.html
@@ -44,6 +44,7 @@
         </p2>
     </section>
     <section>
+        <div class="grid">
         <h2>
             Adventure awaits you!
         </h2>
@@ -52,6 +53,7 @@
         <img src="images/rafting.three.jpg" alt="series">
         <img src="images/rafting.two.jpg" alt="series">
         <img src="images/rafting1.jpg" alt="series">
+        </div>
     </section>
     
 </main>
