--- a/wwr/about.html
+++ b/wwr/about.html
@@ -15,7 +15,7 @@
         <img src="images/logo.png" alt="White water rafting" width="100px">
         <div class="grid-container">
             <div class="grid-item">1</div>
-            <nav> 
+            <nav class="navigation"> 
                 <a href="site-plan-rafting.html">Home Page</a>
                 <a href="about.html">About Us</a>
                 <a href="trip.html">Places</a>
