--- a/wwr/about.html
+++ b/wwr/about.html
@@ -54,7 +54,7 @@
             <h2>
                 Adventure awaits you!
             </h2>
-            <div class="grid-item">2</div>
+            <div class="grid-item"></div>
             <img src="images/rafting.five.png" alt="series">
             <img src="images/rafting.four.jpg" alt="series">
             <img src="images/rafting.three.jpg" alt="series">
