--- a/wwr/about.html
+++ b/wwr/about.html
@@ -14,7 +14,7 @@
     <header>
         <img src="images/logo.png" alt="White water rafting" width="100px">
         <div class="grid-container">
-            <div class="grid-item">1</div>
+            <div class="grid-item-1"></div>
             <nav class="navigation"> 
                 <a href="site-plan-rafting.html">Home Page</a>
                 <a href="about.html">About Us</a>
