--- a/wwr/about.html
+++ b/wwr/about.html
@@ -66,19 +66,21 @@
 </main>
 <footer>
     ©2025 The raft company -- William Hansen 
-
-    <nav class="sociallinks">
-        <a href="https://facebook.com">
-            <img src="images/fb.jpg" alt="Facebook">
-        </a>
-        <a href="https://twitter.com">
-            <img src="images/tw.png" alt="twitter">
-        
-        </a>
-        <a href="https://instagram.com">
-            <img src="images/IG.jpg" alt="intagram">
-        </a>
-    </nav>
+    <div class="grid-container">
+        <div class="grid-item-2"></div>
+        <nav class="sociallinks">
+            <a href="https://facebook.com">
+                <img src="images/fb.jpg" alt="Facebook">
+            </a>
+            <a href="https://twitter.com">
+                <img src="images/tw.png" alt="twitter">
+            
+            </a>
+            <a href="https://instagram.com">
+                <img src="images/IG.jpg" alt="intagram">
+            </a>
+        </nav>
+    </div>
 </footer>
 
 </html>
