--- a/wwr/about.html
+++ b/wwr/about.html
@@ -37,6 +37,9 @@
             we are here to make happy people in the great outdoors.
             It'll be a slash.
         </p>
+        <div class="hero">
+            <img src="images/rafting1.jpg" alt=" hero image" width="200px">
+        </div>
     </article>
     <section>
         <div>
