--- a/wwr/about.html
+++ b/wwr/about.html
@@ -39,7 +39,7 @@
                 It'll be a slash.
             </p>
             <div class="hero">
-                <img src="images/rafting1.jpg" alt=" hero image" width="400px">
+                <img src="images/rafting.jpg" alt=" good times" width="300px">
             </div>
         </article>
         <section>
@@ -49,9 +49,7 @@
             </div>
             <p2>
                 we establish by a greek settler whose mom was a greek God.
-            
             </p2>
-            <img src="images/rafting.jpg" alt="Happy rafters ">
         </section>
         <section>
             <div class="flexbox-item-3"></div>
