--- a/wwr/about.html
+++ b/wwr/about.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <img src="images/logo.png" alt="White water rafting" width="100px">
+        <img src="images/logo.png" alt="White water rafting">
         <div class="grid-container">
             <div class="grid-item-1"></div>
             <nav class="navigation"> 
@@ -24,48 +24,47 @@
         </div>
     </header>
 </body>
-<main>
-    <div class="flexbox-container">
-        <h1>
-            The Raft company
-        </h1>
+    <main>
+        <div class="flexbox-container">
+            <h1>
+                The Raft company
+            </h1>
 
 
+            </div>
+            <article>
+                <div class=" flexbox-item-1"></div>
+                <p>
+                    we are here to make happy people in the great outdoors.
+                    It'll be a slash.
+                </p>
+                <div class="hero">
+                    <img src="images/rafting.jpg" alt=" good times">
+                </div>
+            </article>
+            <section>
+                <div class="flexbox-item-2"></div>
+                <div>
+                    History 
+                </div>
+                <p>
+                    we establish by a greek settler whose mom was a greek God.
+                </p>
+            </section>
+            <section>
+                <div class="flexbox-item-3"></div>
+                <h2>
+                    Adventure awaits you!
+                </h2>
+                <div class="grid-item-2"></div>
+                <img src="images/rafting.five.png" alt="series">
+                <img src="images/rafting.four.jpg" alt="series">
+                <img src="images/rafting.three.jpg" alt="series">
+                <img src="images/rafting.two.jpg" alt="series">
+                <img src="images/rafting1.jpg" alt="series">
+            </section>
         </div>
-        <article>
-            <div class=" flexbox-item-1"></div>
-            <p>
-                we are here to make happy people in the great outdoors.
-                It'll be a slash.
-            </p>
-            <div class="hero">
-                <img src="images/rafting.jpg" alt=" good times" width="300px">
-            </div>
-        </article>
-        <section>
-            <div class="flexbox-item-2"></div>
-            <div>
-                History 
-            </div>
-            <p2>
-                we establish by a greek settler whose mom was a greek God.
-            </p2>
-        </section>
-        <section>
-            <div class="flexbox-item-3"></div>
-            <h2>
-                Adventure awaits you!
-            </h2>
-            <div class="grid-item-2"></div>
-            <img src="images/rafting.five.png" alt="series">
-            <img src="images/rafting.four.jpg" alt="series">
-            <img src="images/rafting.three.jpg" alt="series">
-            <img src="images/rafting.two.jpg" alt="series">
-            <img src="images/rafting1.jpg" alt="series">
-            </div>
-        </section>
-    </div>
-</main>
+    </main>
 <footer> 
     <div class="grid-container">
         <div class="grid-item-3"></div>
