--- a/wwr/quiz.html
+++ b/wwr/quiz.html
@@ -11,13 +11,16 @@
   <meta name="author" content="William Hansen">
   <link rel="stylesheet" href="styles/quiz.css">
 </head>
+<body>
+  
+
 <Main>
     <form>
         <Legend>CSS Quix</Legend>
         <fieldset>Questions</fieldset>
         <select name="Q1" id="Q1">
             <label for="Q1">1. What does the acronym Css stand for?</label>
-            <input type="text">
+            <input type="text" id="Q1" name="Q1">
         </select>
         <select name="Q2" id="Q2">
             <label for="Q2">2. How are id and class attributes selected in CSS?</label>
@@ -32,10 +35,11 @@
         </select>
         <select name="Q4" id="Q4">
             <label for="Q4">4. What is the bottom margin given this declaration?</label>
-            <input type="text">
+            <input type="text" id="Q4" name="Q4">
         </select>
 
         <button type="submit"> Submit Poll</button>
     </form>
 </Main>
+</body>
 </html>
