--- a/wwr/quiz.html
+++ b/wwr/quiz.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>William Hansen - WDD 130</title>
-  <meta name="description" content="The is William home page for WDD130 for my assignment">
+  <meta name="description" content="This is William Hansen CSS form quiz">
   <meta name="author" content="William Hansen">
   <link rel="stylesheet" href="styles/quiz.css">
 </head>
@@ -18,25 +18,34 @@
     <form>
         <Legend>CSS Quix</Legend>
         <fieldset>Questions</fieldset>
-        <select name="Q1" id="Q1">
-            <label for="Q1">1. What does the acronym Css stand for?</label>
-            <input type="text" id="Q1" name="Q1">
+            <div class="form-item">
+                <select name="Q1" id="Q1">
+                <label for="Q1">1. What does the acronym Css stand for?</label>
+                <input type="text" id="Q1" name="Q1">
+                </select>
+            </div>
         </select>
-        <select name="Q2" id="Q2">
-            <label for="Q2">2. How are id and class attributes selected in CSS?</label>
-            <textarea name="Q2" id="Q2" cols="30" rows=""></textarea>
-        </select>
-        <select name="Q3" id="Q3">
-            <label for="Q3">3. Which of the following is a valid CSS comment?</label>
-            <option value="" selected disabled>choose one...></one></option>
-            <option value=";* *;">;* *;</option>
-            <option value="!* *>">!* *></option>
-            <option value=" /* */">/* */</option>
-        </select>
-        <select name="Q4" id="Q4">
-            <label for="Q4">4. What is the bottom margin given this declaration?</label>
-            <input type="text" id="Q4" name="Q4">
-        </select>
+        <div class="form-item column2">
+            <select name="Q2" id="Q2">
+                <label for="Q2">2. How are id and class attributes selected in CSS?</label>
+                <textarea name="Q2" id="Q2" cols="30" rows=""></textarea>
+            </select>
+        </div>
+        <div class="form-item column2">
+            <select name="Q3" id="Q3">
+                <label for="Q3">3. Which of the following is a valid CSS comment?</label>
+                <option value="" selected disabled>choose one...></one></option>
+                <option value=";* *;">;* *;</option>
+                <option value="!* *>">!* *></option>
+                <option value=" /* */">/* */</option>
+            </select>
+        </div>
+        <div class="form-item column3">
+            <select name="Q4" id="Q4">
+                <label for="Q4">4. What is the bottom margin given this declaration?</label>
+                <input type="text" id="Q4" name="Q4">
+            </select>
+        </div>
 
         <button type="submit"> Submit Poll</button>
     </form>
