--- a/wwr/quiz.html
+++ b/wwr/quiz.html
@@ -19,10 +19,8 @@
         <Legend>CSS Quix</Legend>
         <fieldset>Questions</fieldset>
             <div class="form-item">
-                <select name="Q1" id="Q1">
                 <label for="Q1">1. What does the acronym Css stand for?</label>
                 <input type="text" id="Q1" name="Q1">
-                </select>
             </div>
             </select>
             <div class="form-item column2">
@@ -31,10 +29,10 @@
                     <textarea name="Q2" id="Q2" cols="30" rows=""></textarea>
                 </select>
             </div>
-            <div class="form-item column2">
+            <div class="form-item column3">
                 <select name="Q3" id="Q3">
                     <label for="Q3">3. Which of the following is a valid CSS comment?</label>
-                    <option value="" selected disabled>choose one...></one></option>
+                    <option value="" selected disabled>choose one...</one></option>
                     <option value=";* *;">;* *;</option>
                     <option value="!* *>">!* *></option>
                     <option value=" /* */">/* */</option>
