--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <header>
       <nav class="grid">
         <a href="#">HOME</a>             
-        <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+        <a href="wdd130/site-plan-rafting.html">White Water Rafting Siteplan</a>
         <a href="http://linkedin.com"> Linkedin</a>
         <a href="http://facebook.com"> facebook Profile</a>
-        <a href="wwr/quiz.html"> CSS quiz</a>
+        <a href="wdd130/quiz.html"> CSS quiz</a>
       </grid>
       
     </header>
