--- a/wdd130/quiz.html
+++ b/wdd130/quiz.html
@@ -15,22 +15,21 @@
   
 
 <Main>
+    <Legend>CSS Quix</Legend>
     <form>
-        <Legend>CSS Quix</Legend>
         <fieldset>Questions</fieldset>
             <div class="form-item">
                 <label for="Q1">1. What does the acronym Css stand for?</label>
                 <input type="text" id="Q1" name="Q1">
             </div>
-            </select>
             <div class="form-item column2">
                     <label for="Q2">2. How are id and class attributes selected in CSS?</label>
-                    <textarea name="Q2" id="Q2" cols="30" rows=""></textarea>
+                    <textarea name="Q2" id="Q2" cols="30" rows="4"></textarea>
             </div>
             <div class="form-item column3">
                 <label for="Q3">3. Which of the following is a valid CSS comment?</label>
                 <select name="Q3" id="Q3">
-                    <option value="" selected disabled>choose one...</one></option>
+                    <option value="" selected disabled>choose one...</option>
                     <option value=";* *;">;* *;</option>
                     <option value="!* *>">!* *></option>
                     <option value=" /* */">/* */</option>
