--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -41,7 +41,7 @@
         <nav>
             <a href="site-plan-rafting.html">Home</a>
             <a href="about.html">about Us</a>
-            <a href="#">Contact Us</a>
+            <a href="contact.html">Contact Us</a>
         </nav>
         <h2>Wireframes</h2>
         <h3>Home Page Wireframes</h3>
