--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -29,6 +29,7 @@
             <h1>
                 The Raft company - Contact Us.
             </h1>
+            <article>
             <h2>
                 Company Informations
             </h2>
