--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -25,10 +25,10 @@
     </header>
 </body>
     <main>
+        <h1>
+            Rating Company
+        </h1>
         <div class="flexbox-container">
-            <h1>
-                The Raft company - Contact Us.
-            </h1>
             <article>
                 <div class="flexbox-item"></div>
                 <h2>
