--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -10,6 +10,11 @@
 </head>
 <body>
     <head> 
+        <nav>
+            <a href="site-plan-rafting.html">Home</a>
+            <a href="about.html">about Us</a>
+            <a href="contact.html">Contact Us</a>
+        </nav>
     <h1>Rafting Site Plan </h1>
     <div>William Hansen</div>
     </head>
