--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -27,15 +27,16 @@
     <main>
         <div class="flexbox-container">
             <article>
-                <div class="flexbox-item"></div>
-                <h2>
-                    Company Informations
-                </h2>
-                <p>Address: 144 fake street rexburg,idaho</p>
-                <p>phone: 209-572-5443</p>
-                <p>email: raft@gmail.com</p>
-                <div class="map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d719.6306006501355!2d-111.78793441239657!3d43.82426505505845!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1688841118528!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <div class="flexbox-item">
+                    <h2>
+                        Company Informations
+                    </h2>
+                    <p>Address: 144 fake street rexburg,idaho</p>
+                    <p>phone: 209-572-5443</p>
+                    <p>email: raft@gmail.com</p>
+                    <div class="map">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d719.6306006501355!2d-111.78793441239657!3d43.82426505505845!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1688841118528!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
                 </div>
             </article>
             <section>
