--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -40,40 +40,40 @@
                 </div>
             </article>
             <section>
-                <div class="flexbox-item-2"></div>
-                <h2>
-                    Our Team!
-                </h2>
-                <div class="grid-item-2"></div>
-                <img src="images/happy employee1.jpg" alt="series">
-                <img src="images/employee2.jpg" alt="series">
-                <img src="images/employee3.jpg" alt="series">
+                <div class="flexbox-item-2">
+                    <h2>
+                        Our Team!
+                    </h2>
+                    <div class="grid-item-2"></div>
+                    <img src="images/happy employee1.jpg" alt="series">
+                    <img src="images/employee2.jpg" alt="series">
+                    <img src="images/employee3.jpg" alt="series">
+                </div>
             </section>
             <form>
-                <div class="flexbox-item-3"></div>
-                    <fieldset> Survery</fieldset>
-                    <div class="form-item">
-                        <label for="fullname">1. what is your name?</label>
-                        <input type="text" id="fullname" name="fullname">
-                    </div>
-                    <div class="form-item column2">
-                        <label for="email">2. What is your email?</label>
-                        <input type="text" id="email" name="email">
-                    </div>
-                    <div class="form-item column3">
-                        <label for="purpose">3. Why did you message us today?</label>
-                        <select id="purpose" name="purpose">  
-                            <option value="" selected disabled>choose one...</option>
-                            <option value="general inquiry">general inquiry</option>
-                            <option value="reservation question">reservation question</option>
-                            <option value="website suggestion">website suggestion</option>
-                        </select>
-                    </div>
-                    <div class="form-item column3">
-                        <label for="checkbox">Please subscribe me to the momthly newsletter</label>
-                        <input type="checkbox" id="checkbox" name="checkbox">
-                    </div>
-                    <button type="submit">Submit Survey</button>
+                <fieldset> Survery</fieldset>
+                <div class="form-item">
+                    <label for="fullname">1. what is your name?</label>
+                    <input type="text" id="fullname" name="fullname">
+                </div>
+                <div class="form-item column2">
+                    <label for="email">2. What is your email?</label>
+                    <input type="text" id="email" name="email">
+                </div>
+                <div class="form-item column3">
+                    <label for="purpose">3. Why did you message us today?</label>
+                    <select id="purpose" name="purpose">  
+                        <option value="" selected disabled>choose one...</option>
+                        <option value="general inquiry">general inquiry</option>
+                        <option value="reservation question">reservation question</option>
+                        <option value="website suggestion">website suggestion</option>
+                    </select>
+                </div>
+                <div class="form-item column3">
+                    <label for="checkbox">Please subscribe me to the momthly newsletter</label>
+                    <input type="checkbox" id="checkbox" name="checkbox">
+                </div>
+                <button type="submit">Submit Survey</button>
                 
             </form>
         </div>
