--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -37,10 +37,6 @@
                     <div class="map">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d719.6306006501355!2d-111.78793441239657!3d43.82426505505845!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1688841118528!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
-                </div>
-            </article>
-            <section>
-                <div class="flexbox-item-2">
                     <h2>
                         Our Team!
                     </h2>
@@ -49,7 +45,34 @@
                     <img src="images/employee2.jpg" alt="series">
                     <img src="images/employee3.jpg" alt="series">
                 </div>
-            </section>
+            </article>
+
+            <form>
+                <fieldset> Survery</fieldset>
+                <div class="form-item">
+                    <label for="fullname">1. what is your name?</label>
+                    <input type="text" id="fullname" name="fullname">
+                </div>
+                <div class="form-item column2">
+                    <label for="email">2. What is your email?</label>
+                    <input type="text" id="email" name="email">
+                </div>
+                <div class="form-item column3">
+                    <label for="purpose">3. Why did you message us today?</label>
+                    <select id="purpose" name="purpose">  
+                        <option value="" selected disabled>choose one...</option>
+                        <option value="general inquiry">general inquiry</option>
+                        <option value="reservation question">reservation question</option>
+                        <option value="website suggestion">website suggestion</option>
+                    </select>
+                </div>
+                <div class="form-item column3">
+                    <label for="checkbox">Please subscribe me to the momthly newsletter</label>
+                    <input type="checkbox" id="checkbox" name="checkbox">
+                </div>
+                <button type="submit">Submit Survey</button>
+                </form>
+             
         </div>
     </main>
     <aside>
