--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -26,7 +26,7 @@
 </body>
     <main>
         <div class="flexbox-container">
-            <article>
+            <section>
                 <div class="flexbox-item">
                     <h2>
                         Company Informations
@@ -45,7 +45,7 @@
                     <img src="images/employee2.jpg" alt="series">
                     <img src="images/employee3.jpg" alt="series">
                 </div>
-            </article>
+            </section>
 
             <form>
                 <div class="flexbox-item-1">
