--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -40,10 +40,12 @@
                     <h2>
                         Our Team!
                     </h2>
-                    <div class="grid-item-2">
-                        <img src="images/happy employee1.jpg" alt="series">
-                        <img src="images/employee2.jpg" alt="series">
-                        <img src="images/employee3.jpg" alt="series">
+                    <div class="grid-container">
+                        <div class="grid-item-2">
+                            <img src="images/happy employee1.jpg" alt="series">
+                            <img src="images/employee2.jpg" alt="series">
+                            <img src="images/employee3.jpg" alt="series">
+                        </div>
                     </div>
                 </div>
             </section>
