--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -58,7 +58,7 @@
                 </div>
                 <div class="form-item column2">
                     <label for="email">2. What is your email?</label>
-                    <input type="text" id="email" name="email">
+                    <textarea name="email" id="email" cols="30" rows="4"></textarea>
                 </div>
                 <div class="form-item column3">
                     <label for="purpose">3. Why did you message us today?</label>
