--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -27,7 +27,7 @@
         <section>
             <div class="flexbox-item">
                 <h1>
-                    Company Informations
+                    Company Informations -- The Raft Company
                 </h1>
                 <p>Address: 144 fake street rexburg,idaho</p>
                 <p>phone: 209-572-5443</p>
