--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -66,6 +66,8 @@
                         <option value="reservation question">reservation question</option>
                         <option value="website suggestion">website suggestion</option>
                     </select>
+                    <label for="purpose">Addition Information</label>
+                    <input type="text" id="purpose" name="purpose">
                 </div>
                 <div class="form-item column3">
                     <label for="checkbox">Please subscribe me to the momthly newsletter</label>
