--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
         <a href="http://linkedin.com"> Linkedin</a>
         <a href="http://facebook.com"> facebook Profile</a>
-        <a href="wwr/quiz.html"> CSS quiz</a>
+        <a href="quiz.html"> CSS quiz</a>
       </grid>
       
     </header>
