--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -20,6 +20,22 @@
     </head>
 
     <main>
+        <header>
+            <nav class="navbar navbar-inverse" role="banner" style="z-index: 99;">
+                <a href="site-plan-rafting.html">Home</a>
+                <a href="about.html">about Us</a>
+                <a href="contact.html">Contact Us</a>
+            </nav>
+        </header>
+        <section id="home-hero" class="no-margin">
+            <div class="container">
+                <h1 class="text-center">Crazy river Adventures</h1>
+                <p class="lead text-center">We have skilled rafters waiting to help you!</p>
+                <div class="text-center">
+                    <a href="wwr/trip.html">Get an Adventure Planned</a>
+                </div>
+            </div>
+        </section>
         <h2>Overview</h2>
         <h3>Purpose</h3>
         <p>why?
